# chess-bot

./: .gitignore  CMakeLists.txt  Makefile  main
inc/: bishop_logic.h  board_controller.h  diagonal_logic.h  king_logic.h  knight_logic.h  move.h  pawn_logic.h  piece_logic.h  piece_logic_factory.h  player.h  queen_logic.h  rook_logic.h  square.h  straight_logic.h
src/: bishop_logic.cpp  board_controller.cpp  diagonal_logic.cpp  king_logic.cpp  knight_logic.cpp  main  main.cpp  pawn_logic.cpp  piece_logic.cpp  piece_logic_factory.cpp  player.cpp  queen_logic.cpp  rook_logic.cpp  straight_logic.cpp
tests/: CMakeLists.txt  bishop_logic_test.cpp  board_controller_test.cpp  king_logic_test.cpp  knight_logic_test.cpp  main_test.cpp  pawn_logic_test.cpp  player_test.cpp  queen_logic_test.cpp  rook_logic_test.cpp
